make sure bootbind runs before dnf-system-update
Signed-off-by: Gregory Bartholomew <gregory.lee.bartholomew@gmail.com>

--- a/rc-bootbind.service
+++ b/rc-bootbind.service
@@ -2,6 +2,7 @@
 Description=bind mount currently-booted ESP to /boot
 ConditionFileIsExecutable=/etc/rc.d/rc.bootbind
 After=local-fs.target
+Before=system-update-pre.target
 
 [Service]
 Type=forking
