add DefaultDependencies=no to bootbind.service
Signed-off-by: Gregory Bartholomew <gregory.lee.bartholomew@gmail.com>

--- a/rc-bootbind.service
+++ b/rc-bootbind.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=bind mount currently-booted ESP to /boot
 ConditionFileIsExecutable=/etc/rc.d/rc.bootbind
+DefaultDependencies=no
 After=local-fs.target
 Before=system-update-pre.target
 
