--- a/bootsync.service
+++ b/bootsync.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=synchronize ESPs on mirrored-disk systems
-ConditionFileIsExecutable=/etc/rc.d/rc.bootsync
+ConditionFileIsExecutable=/etc/bootsync/bootsync
 AssertPathIsMountPoint=/boot
 After=local-fs.target
-After=rc-bootbind.service
+After=bootbind.service
 
 [Service]
 Type=forking
-ExecStart=/etc/rc.d/rc.bootsync
+ExecStart=/etc/bootsync/bootsync
 RemainAfterExit=yes
 GuessMainPID=no
 
