Allow ESP root path to be configurable
If the system has the ESP(s) mounted at a path other than /boot,
the user can specify 'esp_root=<path>' while invoking the Makefile
targets to specify the necessary path.

Closes #1.

--- a/bootbind.service
+++ b/bootbind.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=bind mount currently-booted ESP to /boot
+Description=bind mount currently-booted ESP to ${ESP_ROOT}
 ConditionFileIsExecutable=/etc/bootsync/bootbind
 DefaultDependencies=no
 Conflicts=shutdown.target
