type should be oneshot since no processes remain after exit
Signed-off-by: Gregory Bartholomew <gregory.lee.bartholomew@gmail.com>

--- a/bootbind.service
+++ b/bootbind.service
@@ -7,10 +7,9 @@ After=local-fs-pre.target
 Before=local-fs.target shutdown.target
 
 [Service]
-Type=forking
+Type=oneshot
 ExecStart=/etc/bootsync/bootbind
 RemainAfterExit=yes
-GuessMainPID=no
 
 [Install]
 WantedBy=local-fs.target
