--- a/bootsync.service
+++ b/bootsync.service
@@ -5,10 +5,9 @@ After=local-fs.target
 After=bootbind.service
 
 [Service]
-Type=forking
+Type=oneshot
 ExecStart=/etc/bootsync/bootsync
 RemainAfterExit=yes
-GuessMainPID=no
 
 [Install]
 WantedBy=multi-user.target
